--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@storybook/addon-viewport": "^7.6.4",
+    "date-fns": "^2.30.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-datepicker": "^4.24.0",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.4",
@@ -21,11 +25,14 @@
     "@storybook/addon-links": "^7.6.4",
     "@storybook/addon-onboarding": "^1.0.9",
     "@storybook/blocks": "^7.6.4",
+    "@storybook/jest": "^0.2.3",
     "@storybook/nextjs": "^7.6.4",
     "@storybook/react": "^7.6.4",
     "@storybook/test": "^7.6.4",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
